--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Site settings
 # title appears in the header
-title: workshop-template
+title: AISTATS 2026 Workshop on Causality in the Age of AI Scaling
 # description and keywords for meta tags
 description: "Create an OER workshop website quick and easy!"
 keywords: "workshops, OER, Open Education, websites, gh-pages, jekyll"
